--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 cartopy==0.18.0
-jupyterlab==2.2.8
+jupyterlab>=2.2.10
 matplotlib==3.2.2
-numpy==1.18.5
+numpy>=1.21
 pandas==1.0.5
 python==3.7.6
 xarray==0.15.1
@@ -14,5 +14,5 @@ s3fs==0.2.0
 fsspec==2021.8.1
 hvplot==0.7.3
 wget==1.20.3
-aiohttp==3.7.4.post0
+aiohttp>=3.7.4
 geoviews==1.9.2
