--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,9 @@ xarray==0.15.1
 netcdf4==1.5.3
 dask==2.19.0
 zarr==2.8.3
+GEOS==3.7.2
+Shapely==1.6.4
+pyshp==2.1
+PROJ==8.0.0
+pyproj==3.0.0
 cartopy==0.20.2
