--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python==3.7.6
 jupyterlab>=2.2.10
 numpy>=1.21
 pandas==1.0.5
@@ -7,6 +8,4 @@ netcdf4==1.5.3
 dask==2.19.0
 zarr==2.8.3
 seaborn==0.11.2
-proj==9.0.0
-GEOS==3.7.2
 cartopy==0.20.2
