--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,10 @@ netcdf4==1.5.3
 dask==2.19.0
 zarr==2.8.3
 seaborn==0.11.2
+cython>=0.28.5
+shapely>=1.6.4
+geos>=3.7.2
+pyshp>=2.1
+pyproj>=3.0.0
+proj>=8
 cartopy==0.20.2
