--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,4 @@ netcdf4==1.5.3
 dask==2.19.0
 zarr==2.8.3
 seaborn==0.11.2
-cython>=0.28.5
-shapely>=1.6.4
-pyshp>=2.1
-pyproj>=3.0.0
-proj>=8
-cartopy==0.20.2
+cartopy>=0.18.0
